adds readme and copyright info

--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brennan LCARS</title>
+	<title>Brennan TNG</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="format-detection" content="date=no">
@@ -69,7 +69,7 @@
 
 				</main>
 				<footer>
-					<!-- Your copyright information is only a suggestion and you can choose to delete it. -->
+					LCARS Inspired Website Template by www.TheLCARS.com
 				</footer> 
 			</div>
 		</div>
