--- a/site/index.html
+++ b/site/index.html
@@ -13,8 +13,8 @@
 		<div class="wrap">
 			<div class="left-frame-top">
 				<button onclick="playSoundAndRedirect('audio2', '#')" class="panel-1-button">MUSIC</button>
-				<div id="encoding" class="panel-2">Loading...</div>
-				<div style="border-top: var(--panel-border);" id="timing" class="panel-5"></div>
+				<div id="time-into" class="panel-2">-</div>
+				<div style="border-top: var(--panel-border);" id="duration" class="panel-5">-</div>
 			</div>
 			<div class="right-frame-top">
 				<main>
@@ -44,8 +44,8 @@
 			<div class="left-frame">
 				<button onclick="topFunction();" id="topBtn"><span class="hop">screen</span> top</button>
 				<div>
-					<div class="panel-3">03<span class="hop">-111968</span></div>
-					<div class="panel-4">04<span class="hop">-041969</span></div>
+					<div id="encoding" class="panel-3"></div>
+					<div id="segue" class="panel-4"></div>
 					<div class="panel-5">05<span class="hop">-1701D</span></div>
 					<div class="panel-6">06<span class="hop">-071984</span></div>
 					<div class="panel-7">07<span class="hop">-081940</span></div>
