Fixes problem with next button not working

--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
 				<div class="buttons">
 					<a href="#" onclick="commandPrev(); return false;" class="button-blue">Prev</a>
 					<a href="#" onclick="commandPlay(); return false;" class="button-gold">Play/Pause</a>
-					<a href="#" onclick="commandPrev(); return false;" class="button-lima-bean">Next</a>
+					<a href="#" onclick="commandNext(); return false;" class="button-lima-bean">Next</a>
 				</div>
 				<div class="volume-control">
 					<label for="volume" class="volume-label">Volume</label>
