Adds presets to side bar

--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,7 @@
 				<button onclick="playSoundAndRedirect('audio2', '#')" class="panel-1-button">MUSIC</button>
 				<div id="time-into" class="panel-2">-</div>
 				<div style="border-top: var(--panel-border);" id="duration" class="panel-5">-</div>
+				<div id="encoding" class="panel-3"></div>
 			</div>
 			<div class="right-frame-top">
 				<main>
@@ -42,17 +43,16 @@
 		</div>
 		<div class="wrap" id="gap">
 			<div class="left-frame">
-				<button onclick="topFunction();" id="topBtn"><span class="hop">screen</span> top</button>
+				<button onclick="topFunction();" id="topBtn"><span class="hop">Scroll</span> up</button>
 				<div>
-					<div id="encoding" class="panel-3"></div>
-					<div id="segue" class="panel-4"></div>
-					<div class="panel-5">05<span class="hop">-1701D</span></div>
-					<div class="panel-6">06<span class="hop">-071984</span></div>
-					<div class="panel-7">07<span class="hop">-081940</span></div>
-					<div class="panel-8">08<span class="hop">-47148</span></div>
-					<div class="panel-9">09<span class="hop">-081966</span></div>
+					<div id="segue" class="panel-3"></div>
+					<div id="presets" class="panel-10" style="border-bottom: var(--panel-border);" ><span class="hop"></span></div>
 				</div>
 				<div>
+					<div class="panel-6"><span class="hop"></span></div>
+					<div class="panel-7"><span class="hop"></span></div>
+					<div class="panel-8"><span class="hop"></span></div>
+					<div class="panel-9"><span class="hop"></span></div>
 					<div class="panel-10">10<span class="hop">-31</span></div>
 				</div>
 			</div>
